@@ -2,3 +2,6 @@
 - Added 'AddToFront'
 - Added 'GetFirstElement' and 'GetLastElement'
 - Added 'ClearAll' - for clear all elements in vector
+
+[ 06/16/2022 ]
+- Added 'Swap' for swapping vector elements
